headlamp/headlamp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  namespace: headlamp

spec:
  replicas: 1

  selector:
    matchLabels:
      app: headlamp

  template:
    metadata:
      labels:
        app: headlamp

    spec:
      serviceAccountName: headlamp

      containers:
      - name: headlamp
        image: ghcr.io/headlamp-k8s/headlamp:latest

        ports:
        - containerPort: 4466

---
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp

spec:
  selector:
    app: headlamp

  ports:
  - port: 80
    targetPort: 4466
