headlamp/headlamp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: headlamp
  namespace: headlamp

spec:
  ingressClassName: traefik

  rules:
  - host: headlamp.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: headlamp
            port:
              number: 80
